<resources>
    <string name="app_name" translatable="false">ROO</string>
    <string name="levels">Levels</string>
    <string name="settings_button">Settings button</string>
    <string name="runner">Runner</string>
    <string name="dictionary">Dictionary</string>
    <string name="exams">Exams</string>
    <string name="user">User</string>
    <string name="menu">Menu</string>

    <!-- Preference Titles -->
    <string name="messages_header">First level</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="edit_hint">Enter answer</string>
    <string name="check">Check</string>
    <string name="hint">Hint</string>
    <string name="try_again">Try again</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_log_in">Log In</string>
    <string name="action_register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="prompt_username">Username</string>
    <string name="action_register_user">Register user</string>
    <string name="log_out">Log out</string>
    <string name="enter_email">Enter Your E-mail</string>
    <string name="reset_password">Reset password</string>
    <string name="skip">Skip</string>
    <string name="profile">Profile</string>
    <string name="email_text" translatable="false">E-mail:</string>
    <string name="username_text">Username:</string>
    <string name="email_not_verified">E-mail not verified!</string>
    <string name="email_verified">E-mail verified!</string>
    <string name="add_new_topic">Add new topic</string>
    <string name="plus_word">+ Word</string>
    <string name="add_new_english_word">Add new english word</string>
    <string name="add_translation">Add translation</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="dark_theme">Dark theme</string>
    <string name="search">Search</string>
    <string name="meaning">Meaning</string>
    <string name="progress">Progress</string>
    <string name="educated_words">Educated words:</string>
    <string name="competed_levels">Competed levels:</string>
    <string name="word">Word:</string>
    <string name="topics_created">Topics created:</string>
    <string name="words_added">Words added:</string>
    <string name="statistics">Statistics</string>
</resources>