<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/levels_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/levels"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_task" />

        <TextView
            android:id="@+id/exam_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/exams_button"
            app:layout_constraintStart_toStartOf="@+id/exams_button"
            app:layout_constraintTop_toBottomOf="@+id/exams_button" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:background="@color/white"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/settings_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523"
            app:srcCompat="@drawable/ic_settings" />

        <TextView
            android:id="@+id/runner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runner"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/runner_button"
            app:layout_constraintStart_toStartOf="@+id/runner_button"
            app:layout_constraintTop_toBottomOf="@+id/runner_button" />

        <ImageButton
            android:id="@+id/runner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/levels_button"
            app:layout_constraintStart_toEndOf="@+id/exams_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523"
            app:srcCompat="@drawable/ic_runner"
            android:contentDescription="@string/runner" />

        <TextView
            android:id="@+id/level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levels"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/levels_button"
            app:layout_constraintStart_toStartOf="@+id/levels_button"
            app:layout_constraintTop_toBottomOf="@+id/levels_button" />

        <ImageButton
            android:id="@+id/dictionary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/dictionary"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings_button"
            app:layout_constraintStart_toEndOf="@+id/levels_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dictionary" />

        <TextView
            android:id="@+id/dictionary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/dictionary_button"
            app:layout_constraintStart_toStartOf="@+id/dictionary_button"
            app:layout_constraintTop_toBottomOf="@+id/dictionary_button" />

        <ImageButton
            android:id="@+id/exams_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:background="@color/white"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_exam"
            android:contentDescription="@string/exams" />

        <TextView
            android:id="@+id/menu_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/settings_button"
            app:layout_constraintStart_toStartOf="@+id/settings_button"
            app:layout_constraintTop_toBottomOf="@+id/settings_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>




    <Button
        android:id="@+id/user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>